fix(*): Fix mobile autocomplete popup covering input

--- a/css/autocomplete.css
+++ b/css/autocomplete.css
@@ -1,16 +1,12 @@
 .qtp-autocomplete {
-  position: absolute;
-  top: 180px;
-  left: 0px;
-  width: 95%;
-  z-index: 10;
+  position: relative;
+  width: 100%;
 }
 
 .qtp-autocomplete__list {
   background-color: #fcfcfa;
   border: 1px solid rgba(0,0,0,0.75);
-  margin: 0 16px;
-  box-shadow: -2px 2px 16px rgba(0,0,0,0.5)
+  margin: 16px 8px;
 }
 
 .qtp-autocomplete__list-item {
